added input back for command and focus on input when page is clicked

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="current">
             <span>
-                <label id="current-cmd"></label><!-- <input type="text" id="command"> -->
+                <label id="current-cmd"></label><input type="text" id="command">
             </span>
             
         </div>
