removed context menu and added auto-copy when selecting text

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>Console</title>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
     <div class="content">
         <div id="logs">
         </div>
